Add service to retrieve and update recipient data review table records + start functionality of onSubmit for upload-forms-modal

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,8 +1,8 @@
 <div class="page-container">
     <div class="main-content-container">
         <app-recipient-data-review-stats></app-recipient-data-review-stats>
-        <app-recipient-data-review-table (showUploadFormsModalEvent)="this.isUploadFormsModalVisible = $event" ></app-recipient-data-review-table>
+        <app-recipient-data-review-table  (showUploadFormsModalEvent)="this.isUploadFormsModalVisible = $event" ></app-recipient-data-review-table>
     </div>
 </div>
 
-<app-upload-forms-modal (hideUploadForms)="this.isUploadFormsModalVisible = $event" [isVisible]="isUploadFormsModalVisible"></app-upload-forms-modal>
+<app-upload-forms-modal (uploadedFormEvent)="addRecord($event)" (hideUploadForms)="this.isUploadFormsModalVisible = $event" [isVisible]="isUploadFormsModalVisible"></app-upload-forms-modal>
