--- a/src/app/recipient-data-review-table/recipient-data-review-table.component.html
+++ b/src/app/recipient-data-review-table/recipient-data-review-table.component.html
@@ -25,7 +25,7 @@
           <td>{{record.companyName}}</td>
           <td>{{record.formType}}</td>
           <td>{{record.taxYear}}</td>
-          <td>{{record.fileType}}</td>
+          <td>{{record.isFileProductionType ? "Production" : "Test"}}</td>
           <td [classList]="getStatusClass(record.status)"><div class="status-circle"></div>{{record.status}}</td>
           <td><div class="review-page-circle" (click)="open($event, record.formType)"><img src="../../assets/data-review-icon-light.svg"/></div></td>
         </tr>
