Refactor RecipientDataReviewRecord interface + add temporary helper fuction to generate company names + cast record to proper type before adding to list of forms

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -5,4 +5,4 @@
     </div>
 </div>
 
-<app-upload-forms-modal (uploadedFormEvent)="addRecord($event)" (hideUploadForms)="this.isUploadFormsModalVisible = $event" [isVisible]="isUploadFormsModalVisible"></app-upload-forms-modal>
+<app-upload-forms-modal (hideUploadForms)="this.isUploadFormsModalVisible = $event" [isVisible]="isUploadFormsModalVisible"></app-upload-forms-modal>
