--- a/src/app/upload-forms-modal/upload-forms-modal.component.html
+++ b/src/app/upload-forms-modal/upload-forms-modal.component.html
@@ -3,7 +3,7 @@
         <h2 class="p-dialog-header">Upload Forms</h2>
         <i class="pi pi-info-circle" tooltipPosition="top" pTooltip="We could enter additional information about the upload forms modal in here." style="font-size: 1rem"></i>
     </p-header>
-    <form [formGroup]="uploadFormsForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="uploadForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
             <label for="formType" class="input-label">Form Type</label>
             <p-dropdown formControlName="formType" [overlayOptions]="getOverlayOptions()" [options]="formTypes" optionDisabled={{true}} placeholder="Select a form type"></p-dropdown>
@@ -17,8 +17,8 @@
         <div class="form-group">
             <p class="input-label">File Type</p>
             <div class="buttons">
-                <button [ngClass]="{'active' : this.uploadFormsForm.value.isFileProductionType === true}" type="button" class="btn secondary" (click)="handleFileType($event)">Production</button>
-                <button [ngClass]="{'active' : this.uploadFormsForm.value.isFileProductionType === false}" type="button" class="btn secondary" (click)="handleFileType($event)">Test</button>
+                <button [ngClass]="{'active' : this.uploadForm.value.isFileProductionType === true}" type="button" class="btn secondary" (click)="handleFileType($event)">Production</button>
+                <button [ngClass]="{'active' : this.uploadForm.value.isFileProductionType === false}" type="button" class="btn secondary" (click)="handleFileType($event)">Test</button>
             </div>
         </div>
     
@@ -34,7 +34,7 @@
             <div class="choose-and-label-container">
                 <p-fileUpload ngDefaultControl class="choose-file-button" mode="basic" chooseIcon="pi pi-upload"  chooseLabel="Choose a file" url="https://www.primefaces.org/cdn/api/upload.php" 
                 accept="image/*" maxFileSize="1000000" [auto]="true" formControlName="fileUploaded" (onUpload)="handleFileUploaded($event)"></p-fileUpload>
-                <p class="file-name">{{this.uploadFormsForm.value.fileUploaded}}</p>
+                <p class="file-name">{{this.uploadForm.value.fileUploaded}}</p>
             </div>
         </div>
     
