Added getters for FormGroup controls + Added validation for controls + Added handle on submit if form is invalid

--- a/src/app/upload-forms-modal/upload-forms-modal.component.css
+++ b/src/app/upload-forms-modal/upload-forms-modal.component.css
@@ -8,6 +8,10 @@
     /* height: 100%; */
 }
 
+::ng-deep .upload-forms-modal .invalid-field {
+    color: var(--invalid);
+}
+
 ::ng-deep .upload-forms-modal .input-label {
     color: var(--title-color);
     font-weight: 500;
