Update recipient data review service to use observables in a way I can understand

--- a/src/app/upload-forms-modal/upload-forms-modal.component.html
+++ b/src/app/upload-forms-modal/upload-forms-modal.component.html
@@ -44,6 +44,6 @@
             <button class="btn primary" type="submit">Upload Form</button>
         </div>
 
-        <!-- {{this.uploadForm.value | json}} -->
+        {{this.uploadForm.value | json}}
     </form>
 </p-dialog>
