--- a/src/app/upload-forms-modal/upload-forms-modal.component.html
+++ b/src/app/upload-forms-modal/upload-forms-modal.component.html
@@ -26,7 +26,7 @@
     
         <div class="form-group">
             <label for="notes" class="input-label">Notes</label>
-            <textarea formControlName="notes" rows="3" maxlength="100" autoResize="true" pInputTextarea></textarea>
+            <textarea autoResize="false" style="height: 100px; resize: none;" formControlName="notes" maxlength="100" pInputTextarea></textarea>
         </div>
     
         <div class="form-group">
