--- a/src/app/upload-forms-modal/upload-forms-modal.component.css
+++ b/src/app/upload-forms-modal/upload-forms-modal.component.css
@@ -120,3 +120,7 @@
 ::ng-deep .upload-forms-modal .action-buttons-container .btn {
     padding: var(--btn-paddings);
 }
+
+::ng-deep .upload-forms-modal .text-area {
+    height: 1000px !important;
+}
